Fixed some overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,26 @@
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 main {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
   padding: 40px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.qzcl-container {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 .questions-container {
@@ -136,7 +152,7 @@ hr {
   }
   main {
     padding: 0;
-    width: auto;
+    width: 100%;
     min-width: 320px;
   }
   .question-container {
@@ -159,13 +175,20 @@ hr {
     align-items: center;
   }
   .check-btn-cont {
-    margin: 0 auto;
-    width: 400px;
-    max-width: 400px;
+    margin: 0;
+    width: 200px;
+    max-width: 200px;
     flex-direction: column;
     margin-bottom: 25px;
   }
   hr {
     width: 100%;
+  }
+}
+
+@media (max-height: 850px) {
+  main {
+    height: auto;
+    padding: 20px;
   }
 }
