--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
   display: flex;
   justify-content: center;
-  height: auto;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -19,4 +23,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#root {
+  width: 100%;
+  height: 100%;
 }
